# gtkmm-opencv-webcam

./: .gitignore  CMakeLists.txt  README.md
resources/glade/: glade-example.glade
src/: main.cpp
src/acquisition/: CMakeLists.txt
src/acquisition/include/acquisition/: camera_handler.h  camera_widget.h
src/acquisition/src/: camera_handler.cpp  camera_widget.cpp
src/camera_tools/: CMakeLists.txt
src/camera_tools/include/camera_tools/: camera.h
src/camera_tools/src/: camera.cpp
src/image_processing/: CMakeLists.txt
src/image_processing/include/image_processing/: imagep.h
src/image_processing/src/: imagep.cpp
src/utilities/: CMakeLists.txt
src/utilities/include/utilities/: date_time_utils.h
src/utilities/src/: date_time_utils.cpp
tests/main/: CMakeLists.txt
tests/main/include/: camera_window.h
tests/main/src/: camera_window.cpp  main.cpp
